# kube-stale-resources

./: .gitignore  Makefile  Pipfile  README.md  kube-stale-resources.py  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml
e2e/: blacklist-kind-empty.txt  resources-kind-one.yml
