[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kube-stale-resources"
version = "1.0.0"
description = "Utility augmenting 'kubectl diff' to detect stale resources in Kubernetes clusters between local YAML manifests (target state) and the cluster (live state)."
authors = ["Christian Nicolai"]
license = "Apache-2.0"
homepage = "https://dev.mycrobase.de/gitea/cn/kube-stale-resources"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "6.0"
requests = "~2.26"

[tool.poetry.dev-dependencies]
mypy = "0.910"
pylint = "~2.11"
rope = "~0.20"
types-PyYAML = "~5.4"
types-requests = "~2.25"
yapf = "~0.31"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
