[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kube-stale-resources"
version = "1.0.0"
description = "Utility augmenting 'kubectl diff' to detect stale resources in Kubernetes clusters between local YAML manifests (target state) and the cluster (live state)."
authors = ["Christian Nicolai"]
license = "Apache-2.0"
homepage = "https://dev.mycrobase.de/gitea/cn/kube-stale-resources"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "6.0.1"
requests = "~2.29.0"

[tool.poetry.dev-dependencies]
mypy = "1.11.0"
pylint = "~3.2.0"
rope = "~1.13.0"
types-PyYAML = "~6.0"
types-requests = "~2.28"
toml = "~0.10"
yapf = "~0.40.0"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
